--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <id>findsecbugs</id>
             <build>
                 <plugins>
+                        <plugin>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <debug>true</debug>
+                                <debuglevel>lines,vars,source</debuglevel>
+                            </configuration>
+                        </plugin>
                     <plugin>
                         <groupId>com.github.spotbugs</groupId>
                         <artifactId>spotbugs-maven-plugin</artifactId>
